force-app/main/default/objects/Portal_Chatter__c/Portal_Chatter__c.object-meta.xml
<CustomObject>
    <label>Portal Chatter</label>
    <nameField>
        <label>Portal Chatter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Chatters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>