force-app/main/default/objects/Portal_Chatter__c/fields/KB_Task__c.field-meta.xml
<CustomField>
    <fullName>KB_Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>KB Task</label>
    <referenceTo>TLG_Task__c</referenceTo>
    <relationshipLabel>Portal Chatters</relationshipLabel>
    <relationshipName>Portal_Chatters</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>