force-app/main/default/objects/Portal_Chatter__c/fields/Parent_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Parent_Chatter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Comment</label>
    <referenceTo>Portal_Chatter__c</referenceTo>
    <relationshipLabel>Replies</relationshipLabel>
    <relationshipName>Replies</relationshipName>
    <type>Lookup</type>
</CustomField>