force-app/main/default/objects/Portal_Chatter__c/fields/Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Portal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Portal Chatters</relationshipLabel>
    <relationshipName>Portal_Chatters</relationshipName>
    <type>Lookup</type>
</CustomField>